[gd_scene load_steps=20 format=2]

[ext_resource path="res://Torrent/TEXTURE/Enemy_Bullet.png" type="Texture" id=1]
[ext_resource path="res://new_ASSATE/superpowers-asset-packs-master/superpowers-asset-packs-master/ninja-adventure/fx/3.png" type="Texture" id=2]
[ext_resource path="res://game_object/projectile/Enemy_bullet.gd" type="Script" id=3]
[ext_resource path="res://Player/Texture/rect_partical.png" type="Texture" id=4]
[ext_resource path="res://Player/Texture/light.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 5.75141

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [  ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "hit",
"speed": 20.0
} ]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.988235 )
colors = PoolColorArray( 1, 1, 1, 0.533333, 1, 0.180392, 0.0470588, 0.513726 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.4875 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.02
angular_velocity = 2.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
linear_accel = 100.0
damping = 44.62
scale = 0.21
scale_random = 0.3
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[node name="Enemy_bullet" type="RigidBody2D"]
collision_layer = 16
collision_mask = 3
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.87451, 0.466667, 0.164706, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
animation = "empty"

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Glow" type="Sprite" parent="."]
modulate = Color( 1, 0.254902, 0.0509804, 0.537255 )
position = Vector2( 1.43051e-06, 1.43051e-06 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 5 )

[node name="trail_partical" type="Particles2D" parent="."]
amount = 60
local_coords = false
process_material = SubResource( 15 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animation_finished"]
[connection signal="timeout" from="destroy_timer" to="." method="_on_destroy_timer_timeout"]
